[gd_scene load_steps=3 format=2]

[ext_resource path="res://systemSketch.PNG" type="Texture" id=1]
[ext_resource path="res://SystemIcon.gd" type="Script" id=2]

[node name="SystemIcon" type="Node2D" groups=[
"SystemIcon",
]]
script = ExtResource( 2 )

[node name="systemSketch" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="systemSketch"]
margin_left = -252.7
margin_top = -230.85
margin_right = -240.7
margin_bottom = -210.85
rect_scale = Vector2( 42.2941, 23.0278 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddFactoryButton" type="Button" parent="."]
margin_left = -150.734
margin_top = 258.628
margin_right = -138.734
margin_bottom = 278.628
rect_scale = Vector2( 26.812, 3.95091 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADDFACTORY" type="Label" parent="AddFactoryButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.128344, 1.27969 )
text = "ADD FACTORY"
[connection signal="pressed" from="systemSketch/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AddFactoryButton" to="." method="_on_AddFactoryButton_pressed"]
